# mathcode

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
mathcode/: __init__.py  ruff.toml
mathcode/abstract_algebra/: __init__.py  fields.py  groups.py  rings.py
mathcode/graph_theory/: __init__.py  advanced.py  centrality.py  flow.py  graph_base.py  properties.py  shortest_path.py  spanning_tree.py  traversal.py
mathcode/optimization/: __init__.py  grad_desc.py  lin_opt.py
mathcode/reinforcement_learning/: __init__.py  dynamic_programming.py  environment.py  monte_carlo.py  policy.py
mathcode/stochastics/: __init__.py  brownian_motion.py  markov.py  poisson.py  sde.py  spde.py
stochastics/: __init__.py  brownian_motion.py  markov.py
tests/: __init__.py  test_brownian.py  test_fields.py  test_grad_desc.py  test_graph_base.py  test_graph_properties.py  test_graph_traversal.py  test_groups.py  test_lin_opt.py  test_markov.py  test_poisson.py  test_rings.py  test_rl_algorithms.py  test_rl_environment.py  test_rl_policy.py  test_sde.py  test_spde.py
