[project]
name = "mathcode"
version = "0.1.2"
description = "A Python library containing reusable models and methods from coursework, including modules on stochastic processes, optimization, graph theory, and more to come."
authors = [{ name = "Ishaan Goel" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["stochastics", "optimization", "graph theory", "numerical methods", "academic code", "math library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy",
    "matplotlib",
    "networkx",
    "scipy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/igoeldc/mathcode"
Issues = "https://github.com/igoeldc/mathcode/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"